# office-editor-mcp

./: .mcp.json  README.md  README_CN.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
src/office_editor_mcp/: __init__.py  excel.py  general.py  powerpoint.py  server.py  word.py
